// Original file: proto/profile.proto


export interface Profile {
  'id'?: (string);
  'created'?: (string);
  'updated'?: (string);
  'deleted'?: (string);
  'user_id'?: (string);
  'username'?: (string);
  'about'?: (string);
  'resume_id'?: (string);
  'cover_id'?: (string);
  'cover_url'?: (string);
}

export interface Profile__Output {
  'id': (string);
  'created': (string);
  'updated': (string);
  'deleted': (string);
  'user_id': (string);
  'username': (string);
  'about': (string);
  'resume_id': (string);
  'cover_id': (string);
  'cover_url': (string);
}
